# fairsplit

./: README.md  db.sqlite3  manage.py  pyproject.toml
fairsplit/: asgi.py  settings.py  urls.py  wsgi.py
splits/: admin.py  apps.py  models.py  serializers.py  views.py
splits/migrations/: 0001_initial.py
